Add louvre.desktop wayland session

--- a/src/examples/meson.build
+++ b/src/examples/meson.build
@@ -1,6 +1,14 @@
 # Textures, icons, etc
 assets = run_command('find', './common/assets', '-type', 'f', '-name', '*.png', check : false).stdout().strip().split('\n')
 
+# Wayland session
+session_conf = configuration_data()
+session_conf.set('LOUVRE_VIEWS_PATH', join_paths(get_option('prefix'), get_option('bindir'), 'louvre-views'))
+configure_file(input : './common/assets/louvre.desktop.in',
+               output : 'louvre.desktop',
+               configuration : session_conf,
+               install_dir : '/usr/local/share/wayland-sessions')
+
 # Default dock configuration
 apps_conf = configuration_data()
 apps_conf.set('ASSETS_PATH', ASSETS_INSTALL_PATH)
