Add XDG activation protocol

--- a/src/meson.build
+++ b/src/meson.build
@@ -90,6 +90,7 @@ endforeach
 globals = [
     'LinuxDMABuf',
     'Wayland',
+    'XdgActivation',
     'XdgDecoration',
     'XdgShell',
     'XdgOutput',
