Make the LActivationToken destructor private and delete the move/copy constructors to prevent misuse of the API
Remove unnecessary flag in meson.build that generates annoying warnings with the Clang compiler

--- a/src/meson.build
+++ b/src/meson.build
@@ -32,8 +32,7 @@ add_project_arguments([
     '-DLOUVRE_DEFAULT_GRAPHIC_BACKEND="@0@"'.format(get_option('default_graphic_backend')),
     '-DLOUVRE_DEFAULT_INPUT_BACKEND="@0@"'.format(get_option('default_input_backend')),
     '-DLOUVRE_DEFAULT_ASSETS_PATH="@0@"'.format(ASSETS_INSTALL_PATH),
-    '-Wno-missing-field-initializers',
-    '-Wlogical-op'
+    '-Wno-missing-field-initializers'
 ], language: 'cpp')
 
 if get_option('buildtype') == 'custom'
