Add image capture source protocol

--- a/src/meson.build
+++ b/src/meson.build
@@ -102,6 +102,7 @@ globals = [
     'PointerGestures',
     'SessionLock',
     'ScreenCopy',
+    'ImageCaptureSource',
     'LayerShell',
     'ForeignToplevelManagement',
     'ForeignToplevelList',
