Wayland Backend: Emit fake key release events for all pressed keys when a wl_keyboard_leave event is received
louvre-views: Hide built-in dock when cuarzo-shelf is detected

--- a/src/examples/louvre-views/meson.build
+++ b/src/examples/louvre-views/meson.build
@@ -5,6 +5,7 @@ executable(
     [sources, common_src],
     dependencies : [
         louvre_dep,
+        glesv2_dep,
         wayland_server_dep,
         input_dep,
         fontconfig_dep,
