--- a/src/tests/meson.build
+++ b/src/tests/meson.build
@@ -1,11 +1,2 @@
-sources = run_command('find', '.', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]', check : false).stdout().strip().split('\n')
-
-executable(
-    'louvre-tests',
-    sources : sources,
-    dependencies : [
-        louvre_dep
-    ],
-    install : false)
-
-
+subdir('utils')
+subdir('formats')
