--- a/src/backends/input/Libinput/meson.build
+++ b/src/backends/input/Libinput/meson.build
@@ -3,10 +3,12 @@ DRMBackend = library(
     name_prefix : '',
     name_suffix : 'so',
     sources : [
+        louvre_extra_files,
         'LInputBackendLibinput.cpp'
     ],
     include_directories : include_paths + [include_directories('./..')],
     dependencies : [
+        partial_deps,
         louvre_dep,
         udev_dep,
 	    input_dep,
