--- a/src/backends/input/Wayland/meson.build
+++ b/src/backends/input/Wayland/meson.build
@@ -3,10 +3,12 @@ DRMBackend = library(
     name_prefix : '',
     name_suffix : 'so',
     sources : [
+        louvre_extra_files,
         'LInputBackendWayland.cpp'
     ],
     include_directories : include_paths + [include_directories('./..')],
     dependencies : [
+        partial_deps,
         louvre_dep,
         wayland_client_dep
     ],
