--- a/src/examples/louvre-weston-clone/meson.build
+++ b/src/examples/louvre-weston-clone/meson.build
@@ -2,8 +2,9 @@ sources = run_command('find', './src', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp
 
 executable(
     'louvre-weston-clone',
-    [sources, common_src],
+    [louvre_extra_files, sources, common_src],
     dependencies : [
+        partial_deps,
         louvre_dep,
         gl_dep,
         fontconfig_dep,
