--- a/src/backends/graphic/DRM/meson.build
+++ b/src/backends/graphic/DRM/meson.build
@@ -3,10 +3,12 @@ GraphicBackendDRM = library(
     name_prefix : '',
     name_suffix : 'so',
     sources : [
+        louvre_extra_files,
         'LGraphicBackendDRM.cpp'
     ],
     include_directories : include_paths + [include_directories('./..')],
     dependencies : [
+        partial_deps,
         louvre_dep,
         udev_dep,
         egl_dep,
