--- a/src/examples/louvre-views/meson.build
+++ b/src/examples/louvre-views/meson.build
@@ -2,8 +2,9 @@ sources = run_command('find', './src', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp
 
 executable(
     'louvre-views',
-    [sources, common_src],
+    [louvre_extra_files, sources, common_src],
     dependencies : [
+        partial_deps,
         louvre_dep,
         glesv2_dep,
         wayland_server_dep,
