Implement the invisible-region protocol

--- a/src/meson.build
+++ b/src/meson.build
@@ -112,7 +112,8 @@ protocols = [
     'DRMLease',
     'WlrOutputManagement',
     'SvgPath',
-    'BackgroundBlur'
+    'BackgroundBlur',
+    'InvisibleRegion'
 ]
 
 foreach p : protocols
