--- a/src/examples/cz-louvre-default/meson.build
+++ b/src/examples/cz-louvre-default/meson.build
@@ -1,8 +1,8 @@
 executable(
-    'louvre-default',
+    'cz-louvre-default',
     sources : ['main.cpp'],
     dependencies : [
-        louvre_dep,
+        cz_louvre_dep,
         gl_dep,
     ],
     install : true)
